--- a/ bestcardgameever-android/Yan-Droid/AndroidManifest.xml
+++ b/ bestcardgameever-android/Yan-Droid/AndroidManifest.xml
@@ -6,13 +6,18 @@
       >
       <uses-sdk android:minSdkVersion="3" />
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".Yaniv"
+        <activity android:name=".MainScreen"
                   android:label="@string/app_name"
                   android:configChanges="keyboardHidden|orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".Yaniv"
+                  android:label="@string/app_name"
+                  android:configChanges="keyboardHidden|orientation"
+                  >
         </activity>
 
     </application>
