--- a/bestcardgameever-android/Branches/Yaniv For Android/AndroidManifest.xml
+++ b/bestcardgameever-android/Branches/Yaniv For Android/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="com.geekadoo" android:versionCode="1" android:versionName="0.1.0">
-	<application android:icon="@drawable/icon" android:label="@string/app_name">
+	package="com.geekadoo" android:versionCode="2" android:versionName="0.2.0">
+	<application android:icon="@drawable/icon" android:label="@string/app_name"
+	android:theme="@style/CustomButton">
 		<activity 	android:name=".ui.MainScreen"
 		 			android:label="@string/app_name"
 					android:configChanges="keyboardHidden|orientation">
@@ -15,6 +16,7 @@
                   android:configChanges="keyboardHidden|orientation"
                   >
         </activity>
+        
 	</application>
 	<uses-sdk android:minSdkVersion="3" />
 
