--- a/bestcardgameever-android/Branches/Yaniv For Android/AndroidManifest.xml
+++ b/bestcardgameever-android/Branches/Yaniv For Android/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="com.geekadoo" android:versionCode="6" android:versionName="0.2.3">
+	package="com.geekadoo" android:installLocation="preferExternal"
+	android:versionCode="7" android:versionName="0.2.5">
 	<application android:icon="@drawable/icon" android:label="@string/app_name"
 	android:theme="@style/CustomButton">
 		<activity 	android:name=".ui.MainScreen"
