--- a/bestcardgameever-android/Branches/Yaniv For Android/AndroidManifest.xml
+++ b/bestcardgameever-android/Branches/Yaniv For Android/AndroidManifest.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.geekadoo" android:installLocation="preferExternal"
-	android:versionCode="7" android:versionName="0.3.0">
+	android:versionCode="7" android:versionName="0.3.1">
 	<application android:icon="@drawable/icon" android:label="@string/app_name"
 	android:theme="@style/CustomButton">
 		<activity 	android:name=".ui.MainScreen"
 		 			android:label="@string/app_name"
-					android:configChanges="keyboardHidden|orientation">
+					android:configChanges="keyboardHidden|orientation"
+					android:screenOrientation="portrait">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
@@ -15,6 +16,7 @@
         <activity android:name=".ui.Yaniv"
                   android:label="@string/app_name"
                   android:configChanges="keyboardHidden|orientation"
+                  android:screenOrientation="portrait"
                   >
         </activity>
         
