--- a/bestcardgameever-android/Branches/Yaniv For Android/AndroidManifest.xml
+++ b/bestcardgameever-android/Branches/Yaniv For Android/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.geekadoo" android:installLocation="preferExternal"
-	android:versionCode="8" android:versionName="0.3.1">
+	android:versionCode="9" android:versionName="0.4.0">
 	<application android:icon="@drawable/icon" android:label="@string/app_name"
-	android:theme="@style/CustomButton">
+	android:theme="@style/CustomButton" android:name="com.geekadoo.MyApplication">
 		<activity 	android:name=".ui.MainScreen"
 		 			android:label="@string/app_name"
 					android:configChanges="keyboardHidden|orientation"
@@ -23,4 +23,5 @@
 	</application>
 	<uses-sdk android:minSdkVersion="3" />
 
+<uses-permission android:name="android.permission.INTERNET"></uses-permission>
 </manifest> 
