--- a/bestcardgameever-android/Branches/Yaniv For Android/AndroidManifest.xml
+++ b/bestcardgameever-android/Branches/Yaniv For Android/AndroidManifest.xml
@@ -1,27 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.geekadoo" android:installLocation="preferExternal"
-	android:versionCode="10" android:versionName="0.4.1">
+	android:versionCode="11" android:versionName="0.5.0">
 	<application android:icon="@drawable/icon" android:label="@string/app_name"
-	android:theme="@style/CustomButton" android:name="com.geekadoo.MyApplication">
-		<activity 	android:name=".ui.MainScreen"
-		 			android:label="@string/app_name"
-					android:configChanges="keyboardHidden|orientation"
-					android:screenOrientation="portrait">
+		android:theme="@style/CustomButton" android:name="com.geekadoo.MyApplication">
+		<activity android:name=".ui.MainScreen" android:label="@string/app_name"
+			android:configChanges="keyboardHidden|orientation"
+			android:screenOrientation="portrait">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-        <activity android:name=".ui.Yaniv"
-                  android:label="@string/app_name"
-                  android:configChanges="keyboardHidden|orientation"
-                  android:screenOrientation="portrait"
-                  >
-        </activity>
-        
+		<activity android:name=".ui.Yaniv" android:label="@string/app_name"
+			android:configChanges="keyboardHidden|orientation"
+			android:screenOrientation="portrait">
+		</activity>
+			<!-- External -->
+		
+				<!-- Adding coreSocial SDK Activity Definitions -->
+		<activity android:name="com.scoreloop.android.coreui.HighscoresActivity"
+			android:screenOrientation="portrait" />
+		<activity android:name="com.scoreloop.android.coreui.ProfileActivity"
+			android:screenOrientation="portrait" />
+		<activity android:name="com.scoreloop.android.coreui.AccountActivity"
+			android:screenOrientation="portrait" />
+		<activity android:name="com.scoreloop.android.coreui.BuddiesActivity"
+			android:screenOrientation="portrait" />
+		<activity android:name="com.scoreloop.android.coreui.BuddiesAddActivity"
+			android:screenOrientation="portrait" />
+		<activity android:name="com.scoreloop.android.coreui.GamesActivity"
+			android:screenOrientation="portrait" />
+		<activity android:name="com.scoreloop.android.coreui.GameActivity"
+			android:screenOrientation="portrait" />
+		<activity android:name="com.scoreloop.android.coreui.UserActivity"
+			android:screenOrientation="portrait" />
+		<activity android:name="com.scoreloop.android.coreui.PostScoreActivity"
+			android:screenOrientation="portrait" android:theme="@style/TransparentDialog" />
+		
+
 	</application>
+
 	<uses-sdk android:minSdkVersion="3" />
 
-<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+	<!-- setting permissions for the coreSocial SDK -->
+	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
+	<!-- <uses-permission android:name="android.permission.READ_CONTACTS" /> -->
 </manifest> 
