--- a/bestcardgameever-android/Branches/Yaniv For Android/AndroidManifest.xml
+++ b/bestcardgameever-android/Branches/Yaniv For Android/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.geekadoo" android:installLocation="preferExternal"
-	android:versionCode="12" android:versionName="0.5.1">
+	android:versionCode="13" android:versionName="0.5.5">
 	<application android:icon="@drawable/icon" android:label="@string/app_name"
 		android:theme="@style/CustomButton" android:name="com.geekadoo.MyApplication">
 		<activity android:name=".ui.MainScreen" android:label="@string/app_name"
@@ -16,6 +16,7 @@
 			android:configChanges="keyboardHidden|orientation"
 			android:screenOrientation="portrait">
 		</activity>
+	<activity android:name=".ui.YanivPreferencesScreen"></activity>
 			<!-- External -->
 		
 				<!-- Adding coreSocial SDK Activity Definitions -->
@@ -39,7 +40,8 @@
 			android:screenOrientation="portrait" android:theme="@style/TransparentDialog" />
 		
 
-	</application>
+
+</application>
 
 	<uses-sdk android:minSdkVersion="3" />
 
