--- a/bestcardgameever-android/Branches/Yaniv For Android/AndroidManifest.xml
+++ b/bestcardgameever-android/Branches/Yaniv For Android/AndroidManifest.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.geekadoo" android:installLocation="preferExternal"
-	android:versionCode="14" android:versionName="0.5.6">
+	android:versionCode="15" android:versionName="0.6">
+		<uses-sdk android:minSdkVersion="5" android:targetSdkVersion="15"/>
+	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+	<!-- setting permissions for the coreSocial SDK -->
+	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
+	<!-- <uses-permission android:name="android.permission.READ_CONTACTS" /> -->
+		
+    
 	<application android:icon="@drawable/icon" android:label="@string/app_name"
 		android:theme="@style/CustomButton" android:name="MyApplication">
 		<activity android:name=".ui.MainScreen" android:label="@string/app_name"
@@ -40,13 +47,8 @@
 			android:screenOrientation="portrait" android:theme="@style/TransparentDialog" />
 		
 
+		
 
 </application>
 
-	<uses-sdk android:minSdkVersion="3" />
-
-	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
-	<!-- setting permissions for the coreSocial SDK -->
-	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
-	<!-- <uses-permission android:name="android.permission.READ_CONTACTS" /> -->
 </manifest> 
